objects/Income__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Income__c</fullName>
        <label>Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_agreement_time_stamp__c</fullName>
        <label>Income agreement time stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <formula>IF(ISPICKVAL( Frequency__c,&apos;Weekly&apos; ),Gross_Income__c *52/12, IF(ISPICKVAL(Frequency__c,&apos;Fortnightly&apos;),Gross_Income__c *26/12,(IF(ISPICKVAL(Frequency__c,&apos;Monthly&apos;),Gross_Income__c,(IF(ISPICKVAL(Frequency__c,&apos;Yearly&apos;),Gross_Income__c/12,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Income_Added__c</fullName>
        <label>Next Income Added</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Income__c</fullName>
        <label>Other Income?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>part-time employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>personal business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>investment income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rental income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Income</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Frequency__c</columns>
        <columns>Gross_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Other_Income__c</columns>
        <columns>Type__c</columns>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INC-{0000000000}</displayFormat>
        <label>Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>